--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@auth0/auth0-vue": "^1.0.2",
     "@chinhpd/vue3-grid-images": "^1.0.3",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
